feat: choose fee token (#91)
* feat: choose fee token

* fix: button disabled when changing fee token

* fix: do not focus token selection input on mobile

* feat: sort fee tokens by existing balances

* fix: fee token dropdown position and style

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -20,6 +20,7 @@
 @import "./components/transactionToken.scss";
 @import "./components/rampBtn.scss";
 @import "./components/tooltip.scss";
+@import "./components/tokenDropdown.scss";
 
 //Pages
 @import "./pages/index.scss";
