--- a/src/assets/style/blocks/_infoBlock.scss
+++ b/src/assets/style/blocks/_infoBlock.scss
@@ -30,7 +30,7 @@
       display: inline-flex;
 
       .zkSyncLogo {
-        @apply mr-2;
+        @apply mr-2 relative top-0.5;
 
         height: 1.8rem;
         max-height: 100%;
@@ -81,10 +81,6 @@
     footer {
       width: 100%;
       height: max-content;
-    }
-
-    .zkSyncLogoFull {
-      height: 2.5rem;
     }
 
     @media screen and (max-width: $mobile) {
