--- a/src/assets/style/blocks/_lineTableHeader.scss
+++ b/src/assets/style/blocks/_lineTableHeader.scss
@@ -19,7 +19,7 @@
       width: max-content;
     }
 
-    letter-spacing: -.025em;
+    letter-spacing: -0.025em;
   }
 
   @media screen and (max-width: $mobile) {
