--- a/src/assets/style/components/_tooltip.scss
+++ b/src/assets/style/components/_tooltip.scss
@@ -1,37 +1,37 @@
 .tooltip {
-    display: block !important;
-    z-index: 9999;
-    opacity: 1;
-    transition: $transition;
-    transition-property: visibility, opacity;
-    will-change: visibility, opacity;
-    
-    &:not(.popover) {
-        pointer-events: none;
-        
-        .tooltip-inner {
-            margin-top: 7px;
-            background: #00000046;
-            color: $white;
-            border-radius: 4px;
-            font-size: 14px;
-            padding: 3px 10px;
-        }
-        .tooltip-arrow {
-            display: none;
-        }
-        &[aria-hidden='true'] {
-            visibility: hidden;
-            opacity: 0;
-        }
+  display: block !important;
+  z-index: 9999;
+  opacity: 1;
+  transition: $transition;
+  transition-property: visibility, opacity;
+  will-change: visibility, opacity;
+
+  &:not(.popover) {
+    pointer-events: none;
+
+    .tooltip-inner {
+      margin-top: 7px;
+      background: #00000046;
+      color: $white;
+      border-radius: 4px;
+      font-size: 14px;
+      padding: 3px 10px;
     }
-    &.popover {
-        .tooltip-inner {
-            background: #fff;
-            color: $black;
-            box-shadow: 0 4px 20px 0 rgba(52, 73, 94, 0.2);
-            border-radius: 5px;
-            font-weight: 300;
-        }
+    .tooltip-arrow {
+      display: none;
     }
+    &[aria-hidden="true"] {
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+  &.popover {
+    .tooltip-inner {
+      background: #fff;
+      color: $black;
+      box-shadow: 0 4px 20px 0 rgba(52, 73, 94, 0.2);
+      border-radius: 5px;
+      font-weight: 300;
+    }
+  }
 }
