--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -1,182 +1,7 @@
-.bn-onboard-modal {
-  z-index: 4;
-  background-color: transparentize($color: $black, $amount: 0.7);
-
-  .bn-onboard-custom.bn-onboard-modal-content {
-    width: 85%;
-  }
-
-  @media screen and (min-width: $mobile) {
-    left: 43% !important;
-    width: 57% !important;
-    background-color: transparent !important;
-
-    .bn-onboard-modal-content {
-      width: 85%;
-    }
-
-    @media screen and (min-width: 1300px) {
-      left: 600px !important;
-      width: calc(100% - 600px) !important;
-    }
-  }
-
-  .bn-onboard-modal-content {
-    max-height: calc(100vh - 2.66em);
-    font-family: $firaSans;
-
-    @media (max-width: $mobile) {
-      height: 100vh !important;
-      max-height: 75vh !important;
-
-      .bn-onboard-modal-content-header {
-        margin: 1rem 0 !important;
-      }
-    }
-  }
-
-  ul.bn-onboard-modal-select-wallets {
-    max-height: 50vh !important;
-    overflow: auto;
-  }
-
-  .bn-onboard-custom.bn-onboard-select-wallet-definition {
-    font-size: 14px;
-
-    span {
-      font-weight: 600;
-      display: block;
-      margin: 5px 0;
-
-      a {
-        color: #8c8dfc !important;
-      }
-    }
-  }
-
-  .bn-onboard-select-wallet-info {
-    color: $lightViolet !important;
-    font-weight: 600;
-    font-size: 16px;
-  }
-
-  .bn-onboard-icon-button {
-    border-radius: 8px;
-  }
-
-  .bn-onboard-selected-wallet {
-    background-color: transparentize($color: $gray, $amount: .95) !important;
-    box-shadow: 0 0 0 1.5px $violet !important;
-
-    &:hover {
-      box-shadow: 0 0 0 2.5px $lightViolet !important;
-    }
-
-    span {
-      i {
-        font-style: normal;
-        text-transform: capitalize;
-        text-decoration: none;
-      }
-    }
-  }
-
-  .bn-onboard-prepare-button {
-    color: $white !important;
-    background-color: $violet;
-    border-color: $violet !important;
-    border-radius: 4px;
-    transition: $transition;
-
-    &:hover {
-      background-color: $lightViolet !important;
-      border-color: $lightViolet;
-    }
-  }
-
-  .bn-onboard-prepare-error,
-  .bn-onboard-modal-content-header {
-    background-color: transparent !important;
-  }
-
-  .bn-onboard-dark-mode-background-hover:hover,
-  .bn-onboard-dark-mode-background {
-    background-color: $violet !important;
-  }
-
-  .bn-onboard-modal-content-header {
-    height: auto;
-    margin-bottom: 2em;
-    padding: 0;
-  }
-
-  .bn-onboard-modal-content-close {
-    top: 1.65em;
-    width: 25px;
-    height: 25px;
-
-    svg {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-
-  .bn-onboard-custom.bn-onboard-modal-content-header-icon {
-    display: none !important;
-    visibility: hidden !important;
-  }
-  @media screen and (max-width: $mobile) {
-    button.bn-onboard-modal.bn-onboard-modal-content
-    {
-      margin: 0.25rem 0;
-      padding: 0.5rem;
-    }
-    .bn-onboard-modal-content
-    {
-      padding-bottom: 0;
-      header.bn-onboard-custom.bn-onboard-modal-content-header
-      {
-        margin: 1rem 0 !important;
-        h3 {
-          margin: 0 !important;
-        }
-      }
-      .bn-onboard-custom.bn-onboard-select-description
-      {
-        margin: 0 0 0.5rem;
-        padding: 0 0 0.5rem;
-      }
-      ul.bn-onboard-custom.bn-onboard-modal-select-wallets
-      {
-        height: 100%;
-        max-height: calc(100% - 150px - 2rem) !important;
-        margin: 0;
-        padding: 0;
-      }
-      .bn-onboard-custom.bn-onboard-select-info-container
-      {
-        margin: 1rem 0 0.5rem;
-        padding: 0.75rem 0 0.5rem;
-        border-top: 0.5px solid $lightViolet;
-      }
-      .bn-onboard-modal-content-close
-      {
-        top: 2rem;
-      }
-
-      .bn-onboard-custom.bn-onboard-icon-button
-      {
-        margin: 0.25em;
-        padding: 0.25em;
-      }
-    }
-  }
-}
-
-
-#walletconnect-wrapper .walletconnect-modal__base {
-  @media (max-height: $mobile) {
-    max-width: 300px;
+:root {
+  --onboard-wallet-app-icon-border-color: transparent;
+  
+  .bn-onboard-modal {
+    z-index: 4;
   }
 }
