--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -1,4 +1,3 @@
-
 .amountInputGroup {
   width: max-content;
   height: 36px;
@@ -78,7 +77,7 @@
         background-color: transparent;
         outline: none !important;
         border: none;
-        transition: .05s ease;
+        transition: 0.05s ease;
         transition-property: width;
         will-change: width;
         padding: 0 2px;
@@ -108,7 +107,7 @@
         transition: $transition;
         transition-property: color;
         will-change: color;
-        color: transparentize($color: $gray, $amount: .4);
+        color: transparentize($color: $gray, $amount: 0.4);
         width: 15px;
         pointer-events: none;
 
@@ -134,7 +133,7 @@
     width: max-content;
     padding-left: 7px;
   }
-    }
+}
 
 .darkMode .amountInputGroup {
   border-color: $dark2;
@@ -155,6 +154,6 @@
     }
     .underInput {
       color: $dark3;
-  }
     }
   }
+}
