chore: update branding

--- a/src/assets/style/components/_maxHeight.scss
+++ b/src/assets/style/components/_maxHeight.scss
@@ -7,7 +7,7 @@
 }
 
 @media (min-width: $mobile) {
-  .linkLayout .linkPage .zkFooterContainer #built-by-matterlabs {
+  .linkLayout .linkPage .zkFooterContainer #built-by-rootstock {
     position: absolute;
     bottom: 40px;
   }
