--- a/src/assets/style/pages/_link.scss
+++ b/src/assets/style/pages/_link.scss
@@ -209,7 +209,7 @@
           margin-bottom: 1rem;
         }
 
-        #built-by-matterlabs {
+        #built-by-rootstock {
           display: none;
         }
       }
